	Fixed bug where merging selected table cells using the context menu didn't work as expected.
	Fixed bug where some nestled formatting would be applied incorrectly.
	Fixed bug with enter in list items when using the force_br_newlines mode on WebKit patch contributed by Ryan Koopmans.
	Fixed bug where undo/redo could produce js errors on some specific operations.
Version 3.3.4 (2010-04-27)
	Fixed bug where fullscreen plugin would add two editor instances to EditorManager collection.
	Fixed bug where it was difficult to enter text on non western languages such as Japanese on IE.
	Fixed bug where removing contents from nodes could result in an exception when using undo/redo.
	Fixed bug with selection of images inside layers or other resizable containers on IE.
	Fixed so editors isn't initialized on iPhone/iPad devices since they don't have caret support.
Version 3.3.3 (2010-04-19)
	Added new script_loaded callback function setting for the jQuery plugin.
	Added various fixes and new rpc methods for the spellchecker plugin. Patch contributed by Michael Peters.
	Removed some unnecessary inline style information from some of the dialogs.
	Fixed some issues with the chaining for the TinyMCE jQuery plugin.
	Fixed so any extra arguments passed to patched jQuery functions gets passed through. Patch contributed by Lee Henson.
	Fixed so spellchecking/contextmenu can be toggled on/off if the browser has native spellchecker support.
	Fixed bug where some texts in the new paste plugin wasn't placed in language pack.
	Fixed bug where IE would produce an incorrect information message when cutting.
	Fixed bug where removing items using the xhtmlxtras plugin wouldn't work correctly.
	Fixed bug where setting table background images would add extra quotes on Gecko.
	Fixed bug where shortcut for bold/italic/underline wouldn't work properly on WebKit.
	Fixed bug where IE would produce an error message if only contents was an image tag and bold was used.