@@ -7,6 +7,7 @@ Version 3.3.5 (2010-05-06)
 	Fixed bug where some nestled formatting would be applied incorrectly.
 	Fixed bug with enter in list items when using the force_br_newlines mode on WebKit patch contributed by Ryan Koopmans.
 	Fixed bug where undo/redo could produce js errors on some specific operations.
+	Fixed bug where the theme_advanced_font_sizes didn't work as before 3.3 when complex settings where used.
 Version 3.3.4 (2010-04-27)
 	Fixed bug where fullscreen plugin would add two editor instances to EditorManager collection.
 	Fixed bug where it was difficult to enter text on non western languages such as Japanese on IE.
